# esp32-pixel-node

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  ble_gap_handler.cpp  ble_gap_handler.h  ble_gatt_server.cpp  ble_gatt_server.h  espnow_mesh_coordinator.h  gap_gatt_data.h  gap_handler.cpp  gap_handler.h  gatt_profile.cpp  gatt_profile.h  gatts_event_handler.cpp  gatts_event_handler.h  generic_packet.cpp  generic_packet.h  led_packet_processor.cpp  main.cpp  nvs_manager.cpp  nvs_manager.h  packet.cpp  packet.h  pixel_esp32.c  pixel_packet_profile.cpp  pixel_packet_profile.h
main/bluetooth/: ble_gap_handler.cpp  ble_gatt_server.cpp  ble_gatt_server.h  gatt_profile.cpp  gatt_profile.h  network_health_profile.cpp  network_health_profile.h  pixel_packet_profile.cpp  pixel_packet_profile.h
main/led/: gradient.cpp  gradient.h  led_controller.cpp  led_controller.h  led_strip.cpp  led_strip.h  led_strip_encoder.cpp  led_strip_encoder.h  pattern.cpp  pattern.h  player.cpp  player.h  sequence.cpp  sequence.h
main/mesh/: espnow_mesh_coordinator.cpp  espnow_mesh_coordinator.h
main/mesh/adaptive/: neighbor_manager.cpp  neighbor_manager.h  router.cpp  router.h  topology_manager.cpp  topology_manager.h
main/packet/: led_packet_processor.cpp  led_packet_processor.h  packet.h
main/system/: network_health.cpp  network_health.h
